feat: implementa TorneioService e interface, com refatoração das camadas service e dao aplicando YAGNI